--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.data.mongodb.uri=${MONGODB_DATABASE_URL\:mongodb\://localhost\:27017/discordbotwebsite}
 spring.data.mongodb.uuid-representation=standard
 spring.data.mongodb.auto-index-creation=true
+mongodb.connection.string=MyConnection
+mongodb.database.name=MyDatabase
 error.handling.http-status-in-json-response=true
 error.handling.exception-logging=NO_LOGGING
 error.handling.full-stacktrace-http-statuses=5xx
