--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.data.mongodb.uuid-representation=standard
 spring.data.mongodb.auto-index-creation=true
 mongodb.connection.string=MyConnection
 mongodb.database.name=MyDatabase
+spring.messages.basename=languages/messages
+spring.messages.encoding=UTF-8
 error.handling.http-status-in-json-response=true
 error.handling.exception-logging=NO_LOGGING
 error.handling.full-stacktrace-http-statuses=5xx
