Normal Update & Security Update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ error.handling.full-stacktrace-http-statuses=5xx
 error.handling.log-levels.5xx=ERROR
 error.handling.http-statuses.org.springframework.security.authorization.AuthorizationDeniedException=unauthorized
 error.handling.codes.UserEmailUnique=USER_EMAIL_UNIQUE
+server.port=8080
+server.address=127.0.0.1
+auth.rememberMeKey=BDCB412BC4
