--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.data.mongodb.uuid-representation=standard
 spring.data.mongodb.auto-index-creation=true
 mongodb.connection.string=MyConnection
 mongodb.database.name=MyDatabase
+discord.token=MYDISCORDTOKEN
 spring.messages.basename=languages/messages
 spring.messages.encoding=UTF-8
 error.handling.http-status-in-json-response=true
