--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,13 @@ error.handling.codes.UserEmailUnique=USER_EMAIL_UNIQUE
 server.port=8080
 server.address=127.0.0.1
 auth.rememberMeKey=BDCB412BC4
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mymail@gmail.com
+spring.mail.password=myemailpassword
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
