--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,10 @@
             <artifactId>JDA</artifactId>
             <version>5.0.0-beta.23</version> <!-- replace $version with the latest version -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
